--- a/PyBer_Challenge_starter_code.ipynb
+++ b/PyBer_Challenge_starter_code.ipynb
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "Name: ride_id, dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,20 +264,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "type\n",
-       "Rural        7\n",
-       "Suburban    18\n",
-       "Urban       45\n",
+       "Rural         78\n",
+       "Suburban     490\n",
+       "Urban       2405\n",
        "Name: driver_count, dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,13 +285,13 @@
    "source": [
     "# 2. Get the total drivers for each city type\n",
     "\n",
-    "total_drivers_type = pyber_data_df.groupby([\"type\"]).nunique()[\"driver_count\"]\n",
+    "total_drivers_type = city_data_df.groupby([\"type\"]).sum()[\"driver_count\"]\n",
     "total_drivers_type"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "Name: fare, dtype: float64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,20 +344,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "type\n",
-       "Rural        618.275714\n",
-       "Suburban    1075.351667\n",
-       "Urban        885.652889\n",
+       "Rural       55.486282\n",
+       "Suburban    39.502714\n",
+       "Urban       16.571468\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,93 +370,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Total Rides</th>\n",
-       "      <th>Total Drivers</th>\n",
-       "      <th>Total Fares</th>\n",
-       "      <th>Avg Fare per Ride</th>\n",
-       "      <th>Avg Fare per Driver</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>type</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Rural</th>\n",
-       "      <td>125</td>\n",
-       "      <td>7</td>\n",
-       "      <td>4327.93</td>\n",
-       "      <td>34.623440</td>\n",
-       "      <td>618.275714</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Suburban</th>\n",
-       "      <td>625</td>\n",
-       "      <td>18</td>\n",
-       "      <td>19356.33</td>\n",
-       "      <td>30.970128</td>\n",
-       "      <td>1075.351667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Urban</th>\n",
-       "      <td>1625</td>\n",
-       "      <td>45</td>\n",
-       "      <td>39854.38</td>\n",
-       "      <td>24.525772</td>\n",
-       "      <td>885.652889</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          Total Rides  Total Drivers  Total Fares  Avg Fare per Ride  \\\n",
-       "type                                                                   \n",
-       "Rural             125              7      4327.93          34.623440   \n",
-       "Suburban          625             18     19356.33          30.970128   \n",
-       "Urban            1625             45     39854.38          24.525772   \n",
-       "\n",
-       "          Avg Fare per Driver  \n",
-       "type                           \n",
-       "Rural              618.275714  \n",
-       "Suburban          1075.351667  \n",
-       "Urban              885.652889  "
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#  6. Create a PyBer summary DataFrame. \n",
     "# Create the DataFrame\n",
@@ -464,15 +380,15 @@
     "    \"Total Rides\": total_rides_type,\n",
     "    \"Total Drivers\": total_drivers_type,\n",
     "    \"Total Fares\": total_fares_type,\n",
-    "    \"Avg Fare per Ride\": avg_fare_ride_type,\n",
-    "    \"Avg Fare per Driver\": avg_fare_driver_type,})\n",
+    "    \"Average Fare per Ride\": avg_fare_ride_type,\n",
+    "    \"Average Fare per Driver\": avg_fare_driver_type,})\n",
     "\n",
-    "pyber_summary_df\n"
+    "# pyber_summary_df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -499,52 +415,52 @@
        "      <th>Total Rides</th>\n",
        "      <th>Total Drivers</th>\n",
        "      <th>Total Fares</th>\n",
-       "      <th>Avg Fare per Ride</th>\n",
-       "      <th>Avg Fare per Driver</th>\n",
+       "      <th>Average Fare per Ride</th>\n",
+       "      <th>Average Fare per Driver</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Rural</th>\n",
        "      <td>125</td>\n",
-       "      <td>7</td>\n",
+       "      <td>78</td>\n",
        "      <td>4327.93</td>\n",
        "      <td>34.623440</td>\n",
-       "      <td>618.275714</td>\n",
+       "      <td>55.486282</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Suburban</th>\n",
        "      <td>625</td>\n",
-       "      <td>18</td>\n",
+       "      <td>490</td>\n",
        "      <td>19356.33</td>\n",
        "      <td>30.970128</td>\n",
-       "      <td>1075.351667</td>\n",
+       "      <td>39.502714</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Urban</th>\n",
        "      <td>1625</td>\n",
-       "      <td>45</td>\n",
+       "      <td>2405</td>\n",
        "      <td>39854.38</td>\n",
        "      <td>24.525772</td>\n",
-       "      <td>885.652889</td>\n",
+       "      <td>16.571468</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          Total Rides  Total Drivers  Total Fares  Avg Fare per Ride  \\\n",
-       "Rural             125              7      4327.93          34.623440   \n",
-       "Suburban          625             18     19356.33          30.970128   \n",
-       "Urban            1625             45     39854.38          24.525772   \n",
+       "          Total Rides  Total Drivers  Total Fares  Average Fare per Ride  \\\n",
+       "Rural             125             78      4327.93              34.623440   \n",
+       "Suburban          625            490     19356.33              30.970128   \n",
+       "Urban            1625           2405     39854.38              24.525772   \n",
        "\n",
-       "          Avg Fare per Driver  \n",
-       "Rural              618.275714  \n",
-       "Suburban          1075.351667  \n",
-       "Urban              885.652889  "
+       "          Average Fare per Driver  \n",
+       "Rural                   55.486282  \n",
+       "Suburban                39.502714  \n",
+       "Urban                   16.571468  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -584,64 +500,65 @@
        "      <th>Total Rides</th>\n",
        "      <th>Total Drivers</th>\n",
        "      <th>Total Fares</th>\n",
-       "      <th>Avg Fare per Ride</th>\n",
-       "      <th>Avg Fare per Driver</th>\n",
+       "      <th>Average Fare per Ride</th>\n",
+       "      <th>Average Fare per Driver</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Rural</th>\n",
        "      <td>125</td>\n",
-       "      <td>7</td>\n",
+       "      <td>78</td>\n",
        "      <td>$4,327.93</td>\n",
        "      <td>$34.62</td>\n",
-       "      <td>$618.28</td>\n",
+       "      <td>$55.49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Suburban</th>\n",
        "      <td>625</td>\n",
-       "      <td>18</td>\n",
+       "      <td>490</td>\n",
        "      <td>$19,356.33</td>\n",
        "      <td>$30.97</td>\n",
-       "      <td>$1,075.35</td>\n",
+       "      <td>$39.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Urban</th>\n",
        "      <td>1,625</td>\n",
-       "      <td>45</td>\n",
+       "      <td>2,405</td>\n",
        "      <td>$39,854.38</td>\n",
        "      <td>$24.53</td>\n",
-       "      <td>$885.65</td>\n",
+       "      <td>$16.57</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Total Rides  Total Drivers Total Fares Avg Fare per Ride  \\\n",
-       "Rural            125              7   $4,327.93            $34.62   \n",
-       "Suburban         625             18  $19,356.33            $30.97   \n",
-       "Urban          1,625             45  $39,854.38            $24.53   \n",
+       "         Total Rides Total Drivers Total Fares Average Fare per Ride  \\\n",
+       "Rural            125            78   $4,327.93                $34.62   \n",
+       "Suburban         625           490  $19,356.33                $30.97   \n",
+       "Urban          1,625         2,405  $39,854.38                $24.53   \n",
        "\n",
-       "         Avg Fare per Driver  \n",
-       "Rural                $618.28  \n",
-       "Suburban           $1,075.35  \n",
-       "Urban                $885.65  "
+       "         Average Fare per Driver  \n",
+       "Rural                     $55.49  \n",
+       "Suburban                  $39.50  \n",
+       "Urban                     $16.57  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#  8. Format the columns.\n",
-    "# Format the \"Total Rides\" to have the comma for a thousands separator.\n",
+    "# Format the \"Total Rides and Total Drivers\" to have the comma for a thousands separator.\n",
     "pyber_summary_df[\"Total Rides\"] = pyber_summary_df[\"Total Rides\"].map(\"{:,}\".format)\n",
+    "pyber_summary_df[\"Total Drivers\"] = pyber_summary_df[\"Total Drivers\"].map(\"{:,}\".format)\n",
     "# Format the \" * Fare\" columns to have the comma for a thousands separator, a decimal separator and a \"$\".\n",
     "pyber_summary_df[\"Total Fares\"] = pyber_summary_df[\"Total Fares\"].map(\"${:,.2f}\".format)\n",
-    "pyber_summary_df[\"Avg Fare per Ride\"] = pyber_summary_df[\"Avg Fare per Ride\"].map(\"${:,.2f}\".format)\n",
-    "pyber_summary_df[\"Avg Fare per Driver\"] = pyber_summary_df[\"Avg Fare per Driver\"].map(\"${:,.2f}\".format)\n",
+    "pyber_summary_df[\"Average Fare per Ride\"] = pyber_summary_df[\"Average Fare per Ride\"].map(\"${:,.2f}\".format)\n",
+    "pyber_summary_df[\"Average Fare per Driver\"] = pyber_summary_df[\"Average Fare per Driver\"].map(\"${:,.2f}\".format)\n",
     "pyber_summary_df"
    ]
   },
@@ -654,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
