--- a/PyBer_Challenge_starter_code.ipynb
+++ b/PyBer_Challenge_starter_code.ipynb
@@ -236,141 +236,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 134,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "type\n",
-       "Rural        125\n",
-       "Suburban     625\n",
-       "Urban       1625\n",
-       "Name: ride_id, dtype: int64"
-      ]
-     },
-     "execution_count": 117,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#  1. Get the total rides for each city type\n",
     "# city_types = pyber_data_df.set_index([\"city\"])[\"type\"]\n",
     "\n",
     "total_rides_type = pyber_data_df.groupby([\"type\"]).count()[\"ride_id\"]\n",
-    "total_rides_type"
+    "# total_rides_type"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 135,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "type\n",
-       "Rural         78\n",
-       "Suburban     490\n",
-       "Urban       2405\n",
-       "Name: driver_count, dtype: int64"
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 2. Get the total drivers for each city type\n",
     "\n",
     "total_drivers_type = city_data_df.groupby([\"type\"]).sum()[\"driver_count\"]\n",
-    "total_drivers_type"
+    "# total_drivers_type"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 138,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "type\n",
-       "Rural        4327.93\n",
-       "Suburban    19356.33\n",
-       "Urban       39854.38\n",
-       "Name: fare, dtype: float64"
-      ]
-     },
-     "execution_count": 119,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#  3. Get the total amount of fares for each city type\n",
     "total_fares_type = pyber_data_df.groupby([\"type\"]).sum()[\"fare\"]\n",
-    "total_fares_type"
+    "# total_fares_type"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 139,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "type\n",
-       "Rural       34.623440\n",
-       "Suburban    30.970128\n",
-       "Urban       24.525772\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 120,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#  4. Get the average fare per ride for each city type. \n",
     "# Groupby by Type and Driver and mean of fares\n",
     "avg_fare_ride_type = total_fares_type / total_rides_type\n",
-    "avg_fare_ride_type"
+    "# avg_fare_ride_type"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "type\n",
-       "Rural       55.486282\n",
-       "Suburban    39.502714\n",
-       "Urban       16.571468\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 121,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 5. Get the average fare per driver for each city type. \n",
     "avg_fare_driver_type = total_fares_type / total_drivers_type\n",
-    "avg_fare_driver_type"
+    "# avg_fare_driver_type"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,92 +313,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 142,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Total Rides</th>\n",
-       "      <th>Total Drivers</th>\n",
-       "      <th>Total Fares</th>\n",
-       "      <th>Average Fare per Ride</th>\n",
-       "      <th>Average Fare per Driver</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Rural</th>\n",
-       "      <td>125</td>\n",
-       "      <td>78</td>\n",
-       "      <td>4327.93</td>\n",
-       "      <td>34.623440</td>\n",
-       "      <td>55.486282</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Suburban</th>\n",
-       "      <td>625</td>\n",
-       "      <td>490</td>\n",
-       "      <td>19356.33</td>\n",
-       "      <td>30.970128</td>\n",
-       "      <td>39.502714</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Urban</th>\n",
-       "      <td>1625</td>\n",
-       "      <td>2405</td>\n",
-       "      <td>39854.38</td>\n",
-       "      <td>24.525772</td>\n",
-       "      <td>16.571468</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          Total Rides  Total Drivers  Total Fares  Average Fare per Ride  \\\n",
-       "Rural             125             78      4327.93              34.623440   \n",
-       "Suburban          625            490     19356.33              30.970128   \n",
-       "Urban            1625           2405     39854.38              24.525772   \n",
-       "\n",
-       "          Average Fare per Driver  \n",
-       "Rural                   55.486282  \n",
-       "Suburban                39.502714  \n",
-       "Urban                   16.571468  "
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#  7. Cleaning up the DataFrame. Delete the index name\n",
     "pyber_summary_df.index.name = None\n",
-    "pyber_summary_df"
+    "# pyber_summary_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +396,7 @@
        "Urban                     $16.57  "
       ]
      },
-     "execution_count": 127,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,31 +422,300 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 145,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>date</th>\n",
+       "      <th>fare</th>\n",
+       "      <th>ride_id</th>\n",
+       "      <th>driver_count</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Lake Jonathanshire</td>\n",
+       "      <td>2019-01-14 10:14:22</td>\n",
+       "      <td>13.83</td>\n",
+       "      <td>5739410935873</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Urban</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>South Michelleport</td>\n",
+       "      <td>2019-03-04 18:24:09</td>\n",
+       "      <td>30.24</td>\n",
+       "      <td>2343912425577</td>\n",
+       "      <td>72</td>\n",
+       "      <td>Urban</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Port Samanthamouth</td>\n",
+       "      <td>2019-02-24 04:29:00</td>\n",
+       "      <td>33.44</td>\n",
+       "      <td>2005065760003</td>\n",
+       "      <td>57</td>\n",
+       "      <td>Urban</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Rodneyfort</td>\n",
+       "      <td>2019-02-10 23:22:03</td>\n",
+       "      <td>23.44</td>\n",
+       "      <td>5149245426178</td>\n",
+       "      <td>34</td>\n",
+       "      <td>Urban</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>South Jack</td>\n",
+       "      <td>2019-03-06 04:28:35</td>\n",
+       "      <td>34.58</td>\n",
+       "      <td>3908451377344</td>\n",
+       "      <td>46</td>\n",
+       "      <td>Urban</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2370</th>\n",
+       "      <td>Michaelberg</td>\n",
+       "      <td>2019-04-29 17:04:39</td>\n",
+       "      <td>13.38</td>\n",
+       "      <td>8550365057598</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Rural</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2371</th>\n",
+       "      <td>Lake Latoyabury</td>\n",
+       "      <td>2019-01-30 00:05:47</td>\n",
+       "      <td>20.76</td>\n",
+       "      <td>9018727594352</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Rural</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2372</th>\n",
+       "      <td>North Jaime</td>\n",
+       "      <td>2019-02-10 21:03:50</td>\n",
+       "      <td>11.11</td>\n",
+       "      <td>2781339863778</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Rural</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2373</th>\n",
+       "      <td>West Heather</td>\n",
+       "      <td>2019-05-07 19:22:15</td>\n",
+       "      <td>44.94</td>\n",
+       "      <td>4256853490277</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Rural</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2374</th>\n",
+       "      <td>Newtonview</td>\n",
+       "      <td>2019-04-25 10:20:13</td>\n",
+       "      <td>55.84</td>\n",
+       "      <td>9990581345298</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Rural</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2375 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    city                 date   fare        ride_id  \\\n",
+       "0     Lake Jonathanshire  2019-01-14 10:14:22  13.83  5739410935873   \n",
+       "1     South Michelleport  2019-03-04 18:24:09  30.24  2343912425577   \n",
+       "2     Port Samanthamouth  2019-02-24 04:29:00  33.44  2005065760003   \n",
+       "3             Rodneyfort  2019-02-10 23:22:03  23.44  5149245426178   \n",
+       "4             South Jack  2019-03-06 04:28:35  34.58  3908451377344   \n",
+       "...                  ...                  ...    ...            ...   \n",
+       "2370         Michaelberg  2019-04-29 17:04:39  13.38  8550365057598   \n",
+       "2371     Lake Latoyabury  2019-01-30 00:05:47  20.76  9018727594352   \n",
+       "2372         North Jaime  2019-02-10 21:03:50  11.11  2781339863778   \n",
+       "2373        West Heather  2019-05-07 19:22:15  44.94  4256853490277   \n",
+       "2374          Newtonview  2019-04-25 10:20:13  55.84  9990581345298   \n",
+       "\n",
+       "      driver_count   type  \n",
+       "0                5  Urban  \n",
+       "1               72  Urban  \n",
+       "2               57  Urban  \n",
+       "3               34  Urban  \n",
+       "4               46  Urban  \n",
+       "...            ...    ...  \n",
+       "2370             6  Rural  \n",
+       "2371             2  Rural  \n",
+       "2372             1  Rural  \n",
+       "2373             4  Rural  \n",
+       "2374             1  Rural  \n",
+       "\n",
+       "[2375 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 1. Read the merged DataFrame\n"
+    "# 1. Read the merged DataFrame\n",
+    "pyber_data_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 149,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date\n",
+       "2019-01-01 00:08:16    37.91\n",
+       "2019-01-01 00:46:46    47.74\n",
+       "2019-01-01 02:07:24    24.07\n",
+       "2019-01-01 03:46:50     7.57\n",
+       "2019-01-01 05:23:21    10.75\n",
+       "Name: fare, dtype: float64"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 2. Using groupby() to create a new DataFrame showing the sum of the fares \n",
-    "#  for each date where the indices are the city type and date.\n"
+    "#  for each date where the indices are the city type and date.\n",
+    "fare_sum_date_df = pyber_data_df.groupby([\"date\"]).sum()[\"fare\"]\n",
+    "fare_sum_date_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 144,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Total Rides</th>\n",
+       "      <th>Total Drivers</th>\n",
+       "      <th>Total Fares</th>\n",
+       "      <th>Average Fare per Ride</th>\n",
+       "      <th>Average Fare per Driver</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Rural</td>\n",
+       "      <td>125</td>\n",
+       "      <td>78</td>\n",
+       "      <td>$4,327.93</td>\n",
+       "      <td>$34.62</td>\n",
+       "      <td>$55.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Suburban</td>\n",
+       "      <td>625</td>\n",
+       "      <td>490</td>\n",
+       "      <td>$19,356.33</td>\n",
+       "      <td>$30.97</td>\n",
+       "      <td>$39.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Urban</td>\n",
+       "      <td>1,625</td>\n",
+       "      <td>2,405</td>\n",
+       "      <td>$39,854.38</td>\n",
+       "      <td>$24.53</td>\n",
+       "      <td>$16.57</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      index Total Rides Total Drivers Total Fares Average Fare per Ride  \\\n",
+       "0     Rural         125            78   $4,327.93                $34.62   \n",
+       "1  Suburban         625           490  $19,356.33                $30.97   \n",
+       "2     Urban       1,625         2,405  $39,854.38                $24.53   \n",
+       "\n",
+       "  Average Fare per Driver  \n",
+       "0                  $55.49  \n",
+       "1                  $39.50  \n",
+       "2                  $16.57  "
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 3. Reset the index on the DataFrame you created in #1. This is needed to use the 'pivot()' function.\n",
-    "# df = df.reset_index()\n"
+    "# df = df.reset_index()\n",
+    "pyber_summary_df = pyber_summary_df.reset_index()\n",
+    "pyber_summary_df"
    ]
   },
   {
